insert links in content

--- a/vonline_be/war/css/style.css
+++ b/vonline_be/war/css/style.css
@@ -922,6 +922,11 @@ h1 {
 .lenta-item .wallitem-topic .talks-title {
   border-bottom: 0;
 }
+.lenta .bottom-border-line {
+  height: 1px;
+  background: #5090c1;
+  margin: 0 10px;
+}
 .answer-block {
   width: 100%;
 }
