--- a/vonline_be/war/css/style.styl
+++ b/vonline_be/war/css/style.styl
@@ -812,6 +812,11 @@ transform()
   .wallitem-topic .talks-title
     border-bottom 0
 
+.lenta .bottom-border-line
+  height 1px
+  background rgb(80, 144, 193);
+  margin 0 10px
+
 .answer-block
   width 100%
   .input-group-btn
