--- a/vonline_be/war/partials/dialog-single.html
+++ b/vonline_be/war/partials/dialog-single.html
@@ -35,15 +35,15 @@
                         <div ng-hide="message.isEdit">
 
                             <div ng-if="message.content.length < base.contentLength">
-                                <div class="text">{{message.content}}</div>
+                                <div class="text" ng-bind-html="message.content | linky"></div>
                             </div>
                             <div ng-if="message.content.length >= base.contentLength">
                                 <div class="text" ng-hide="message.isFullText">
-                                    {{message.content.slice(0,base.contentLength-1)}}
+                                    <div ng-bind-html="message.content.slice(0,base.contentLength-1) | linky"></div>
                                     <div><a href="#" ng-click="base.toggleFullText(message)">читать далее...</a></div>
                                 </div>
                                 <div class="text" ng-show="message.isFullText">
-                                    {{message.content}}
+                                    <div ng-bind-html="message.content | linky"></div>
                                     <div><a href="#" ng-click="base.toggleFullText(message)">свернуть</a></div>
                                 </div>
                             </div>
