--- a/vonline_be/war/partials/main.html
+++ b/vonline_be/war/partials/main.html
@@ -31,15 +31,15 @@
                                 <div ng-hide="wallItem.topic.isEdit">
 
                                     <div ng-if="wallItem.topic.message.content.length < base.contentLength">
-                                        <div class="text">{{wallItem.topic.message.content}}</div>
+                                        <div class="text" ng-bind-html="wallItem.topic.message.content | linky"></div>
                                     </div>
                                     <div ng-if="wallItem.topic.message.content.length >= base.contentLength">
                                         <div class="text" ng-hide="wallItem.topic.isFullText">
-                                            {{wallItem.topic.message.content.slice(0,base.contentLength-1)}}
+                                            <div ng-bind-html="wallItem.topic.message.content.slice(0,base.contentLength-1) | linky"></div>
                                             <div><a href="#" ng-click="base.toggleFullText(wallItem.topic)">читать далее...</a></div>
                                         </div>
                                         <div class="text" ng-show="wallItem.topic.isFullText">
-                                            {{wallItem.topic.message.content}}
+                                            <div ng-bind-html="wallItem.topic.message.content | linky"></div>
                                             <div><a href="#" ng-click="base.toggleFullText(wallItem.topic)">свернуть</a></div>
                                         </div>
                                     </div>
@@ -130,15 +130,15 @@
                                     <div ng-hide="wallMessage.isEdit">
 
                                         <div ng-if="wallMessage.content.length < base.contentLength">
-                                            <div class="text">{{wallMessage.content}}</div>
+                                            <div class="text" ng-bind-html="wallMessage.content | linky"></div>
                                         </div>
                                         <div ng-if="wallMessage.content.length >= base.contentLength">
                                             <div class="text" ng-hide="wallMessage.isFullText">
-                                                {{wallMessage.content.slice(0,base.contentLength-1)}}
+                                                <div ng-bind-html="wallMessage.content.slice(0,base.contentLength-1) | linky"></div>
                                                 <div><a href="#" ng-click="base.toggleFullText(wallMessage)">читать далее...</a></div>
                                             </div>
                                             <div class="text" ng-show="wallMessage.isFullText">
-                                                {{wallMessage.content}}
+                                                <div ng-bind-html="wallMessage.content | linky"></div>
                                                 <div><a href="#" ng-click="base.toggleFullText(wallMessage)">свернуть</a></div>
                                             </div>
                                         </div>
@@ -227,6 +227,8 @@
                     </div>
 
                 </div>
+
+            <div class="bottom-border-line" ng-if="lenta.wallItems.length > 0"></div>
 
             </div>
 
