--- a/vonline_be/war/css/style.styl
+++ b/vonline_be/war/css/style.styl
@@ -301,7 +301,7 @@ transform()
 .widget-main
   overflow auto
   padding 0
-  padding-bottom 25px
+  padding-bottom 35px
 
 .talks-single .widget-main
 .adverts-single .widget-main
@@ -797,7 +797,7 @@ transform()
   .dialogs
     clear left
     margin 0 0 0 30px
-    padding-top 15px
+    padding-top 11px
     padding-right 0
   .lenta-item-bottom
     position absolute
@@ -811,6 +811,11 @@ transform()
     border-bottom 1px solid #5090c1
   .wallitem-topic .talks-title
     border-bottom 0
+
+.lenta .bottom-border-line
+  height 1px
+  background rgb(80, 144, 193);
+  margin 0 10px
 
 .answer-block
   width 100%
