--- a/vonline_be/war/css/style.styl
+++ b/vonline_be/war/css/style.styl
@@ -1370,6 +1370,8 @@ transform()
     font-size 13px
 .contacts
   padding-left 10px
+  textarea.content
+    overflow hidden
 
 .message-to-show
   width 100%
