message in poll fix

--- a/vonline_be/war/partials/main.html
+++ b/vonline_be/war/partials/main.html
@@ -15,7 +15,7 @@
                                 <div class="avatar" style="background-image: url({{wallItem.topic.userInfo.avatar}})"></div>
                             </a>
 
-                            <div class="body text-container"> <!-- ng-switch on="wallItem.topic.metaType" -->
+                            <div class="body text-container">
 
                                 <div class="message-tools pull-right" ng-show="wallItem.topic.userInfo.id == base.me.id">
                                     <a href="#" title="Удалить" class="message-delete-link pull-right" ng-click="base.deleteMessage(wallItem.topic,lenta.wallItems,true,true)">&times;</a>
