--- a/vonline_be/war/css/style.styl
+++ b/vonline_be/war/css/style.styl
@@ -811,6 +811,11 @@ transform()
     border-bottom 1px solid #5090c1
   .wallitem-topic .talks-title
     border-bottom 0
+  .show-all-comments
+    text-align center
+    padding 5px 0
+    margin-top -9px
+    font-size 13px
 
 .lenta .bottom-border-line
   height 1px
