user group color

--- a/vonline_be/war/css/style.css
+++ b/vonline_be/war/css/style.css
@@ -659,6 +659,9 @@ h1 {
   margin-top: 10px;
 }
 /* новые стили после редизайна 11.06.14 */
+.itemdiv > .user {
+  width: auto;
+}
 .itemdiv > .user > img {
   border-radius: 0;
 }
@@ -1032,6 +1035,15 @@ h1 {
 .avatar.big {
   width: 150px;
   height: 150px;
+}
+.user-ribbon.short2 {
+  width: 48px;
+  clear: left;
+}
+.user-ribbon {
+  height: 5px;
+  margin-top: 5px;
+  width: 100%;
 }
 .create-topic-btn {
   overflow: auto;
