--- a/vonline_be/war/css/style.styl
+++ b/vonline_be/war/css/style.styl
@@ -589,6 +589,8 @@ transform()
     margin-top 10px
 
 /* новые стили после редизайна 11.06.14 */
+.itemdiv > .user
+  width auto
 .itemdiv > .user > img
   border-radius 0
 .itemdiv.dialogdiv > .body
@@ -918,6 +920,15 @@ transform()
   &.big
     width 150px
     height 150px
+
+.user-ribbon.short2
+  width 48px
+  clear left
+
+.user-ribbon
+  height 5px
+  margin-top 5px
+  width 100%
 
 .create-topic-btn
   overflow auto
