--- a/vonline_be/war/partials/main.html
+++ b/vonline_be/war/partials/main.html
@@ -13,6 +13,7 @@
                         <div class="first-message clearfix" >
                             <a ui-sref="profile({userId: {{ wallItem.topic.userInfo.id }} })" class="user">
                                 <div class="avatar" style="background-image: url({{wallItem.topic.userInfo.avatar}})"></div>
+                                <div ng-if="wallItem.topic.userInfo.groupType" class="user-ribbon" ng-class="base.getUserColor(wallItem.topic.userInfo.groupType)"></div>
                             </a>
 
                             <div class="body text-container">
@@ -123,6 +124,8 @@
                             <div class="itemdiv dialogdiv" ng-repeat="wallMessage in wallItem.bufferMessages"> <!-- ng-repeat="wallMessage in wallItem.messages" -->
                                 <a ui-sref="profile({userId: {{ wallMessage.userInfo.id }} })" class="user">
                                     <div class="avatar short2" style="background-image: url({{wallMessage.userInfo.avatar}})"></div>
+
+                                    <div ng-if="wallMessage.userInfo.groupType" class="user-ribbon" ng-class="base.getUserColor(wallMessage.userInfo.groupType)"></div>
                                 </a>
 
                                 <div class="body text-container">
