--- a/vonline_be/war/partials/profit-single.html
+++ b/vonline_be/war/partials/profit-single.html
@@ -13,6 +13,7 @@
                                 <div class="topic-left">
                                     <a ui-sref="profile({ userId : {{ adverts.fullTalkTopic.userInfo.id }} })">
                                         <div class="avatar" style="background-image: url({{adverts.fullTalkTopic.userInfo.avatar}})"></div>
+                                        <div ng-if="adverts.fullTalkTopic.userInfo.groupType" class="user-ribbon" ng-class="base.getUserColor(adverts.fullTalkTopic.userInfo.groupType)"></div>
                                     </a>
                                     <div class="topic-author">
                                     </div>
@@ -128,6 +129,8 @@
                                         <div class="topic-left">
                                             <a ui-sref="profile({userId: {{ firstMessage.userInfo.id }} })">
                                                 <div class="avatar short2" style="background-image: url({{firstMessage.userInfo.avatar}})"></div>
+                                                <div ng-if="firstMessage.userInfo.groupType" class="user-ribbon" ng-class="base.getUserColor(firstMessage.userInfo.groupType)"></div>
+                                            </a>
                                             <div class="topic-author" ng-show="firstMessage.childCount && firstMessage.childCount != 0">
                                                 <a class="fa plus-minus" href="#" ng-class="{ 'fa-plus' : !firstMessage.isTreeOpen,'fa-minus' : firstMessage.isTreeOpen}"
                                                    ng-click="adverts.toggleTreeFirstMessage($event,firstMessage)"></a>
@@ -200,6 +203,7 @@
                                                 <div class="topic-left">
                                                     <a ui-sref="profile({ userId : {{ message.userInfo.id }} })">
                                                         <div class="avatar short2" style="background-image: url({{message.userInfo.avatar}})"></div>
+                                                        <div ng-if="message.userInfo.groupType" class="user-ribbon" ng-class="base.getUserColor(message.userInfo.groupType)"></div>
                                                     </a>
                                                     <div class="topic-author" ng-show="message.childCount && message.childCount != 0">
                                                         <a class="fa plus-minus" href="#" ng-class="{ 'fa-plus' : !message.isTreeOpen,'fa-minus' : message.isTreeOpen}"
