--- a/vonline_be/war/css/style.styl
+++ b/vonline_be/war/css/style.styl
@@ -70,6 +70,17 @@ transform()
     &:hover
       text-decoration none
 
+.new-private-message-count
+  width 10px
+  height 7px
+  border-radius 5px
+  color #fff
+  background #ff0000
+  text-align center
+  padding-top 3px
+  position absolute
+  z-index 2
+
 
 .ace-nav>li
   a
