--- a/vonline_be/war/css/shop.css
+++ b/vonline_be/war/css/shop.css
@@ -1122,6 +1122,32 @@ height 50px
 .modal.bootbox .close {
   margin: -15px -10px 0 0 !important;
 }
+.modal-chooseDate {
+  width: 400px;
+  height: 340px;
+  margin-left: -200px;
+}
+.modal-chooseDate h3 {
+  margin-bottom: 25px;
+  text-align: center;
+  display: block;
+}
+.modal-chooseDate .datepicker-chooseDate {
+  width: 180px;
+  margin: 0 auto;
+}
+.modal-chooseDate .datepicker-chooseDate td {
+  font-size: 14px;
+}
+.modal-chooseDate .datepicker-chooseDate .dow {
+  text-align: center;
+}
+.modal-chooseDate .datepicker-chooseDate .next {
+  text-align: right;
+}
+.modal-chooseDate .btn {
+  margin: 5px 15px 0 0;
+}
 .sidebar#sidebar {
   height: 100%;
   left: 0;
