--- a/vonline_be/war/css/shop.styl
+++ b/vonline_be/war/css/shop.styl
@@ -956,6 +956,26 @@ height 50px
   .close
     margin -15px -10px 0 0 !important
 
+.modal-chooseDate
+  width 400px
+  height 340px
+  margin-left -200px
+  h3
+    margin-bottom 25px
+    text-align center
+    display block
+  .datepicker-chooseDate
+    width 180px
+    margin 0 auto
+    td
+      font-size 14px
+    .dow
+      text-align center
+    .next
+      text-align right
+  .btn
+    margin 5px 15px 0 0
+
 .sidebar#sidebar
   height 100%
   left 0
