--- a/vonline_be/war/css/shop.styl
+++ b/vonline_be/war/css/shop.styl
@@ -304,6 +304,7 @@ transform()
   min-width 40px
   margin-right 0 !important
   padding 8px 5px
+  cursor pointer !important
 
 .datepicker
   padding 0 2px 5px 2px
