--- a/vonline_be/war/css/shop.styl
+++ b/vonline_be/war/css/shop.styl
@@ -976,6 +976,8 @@ height 50px
       text-align right
   .btn
     margin 5px 15px 0 0
+  .chooseDate-block
+    margin 20px 0 0 20px
 
 .sidebar#sidebar
   height 100%
@@ -1178,6 +1180,10 @@ height 50px
   .order-date
     padding 15px 0 15px 10px
     font-weight bold
+    display block
+    color #000
+    &:hover
+      text-decoration none
   .catalog-confirm
     >li
       list-style-type none
