--- a/vonline_be/war/css/shop.css
+++ b/vonline_be/war/css/shop.css
@@ -1149,6 +1149,9 @@ height 50px
 .modal-chooseDate .btn {
   margin: 5px 15px 0 0;
 }
+.modal-chooseDate .chooseDate-block {
+  margin: 20px 0 0 20px;
+}
 .sidebar#sidebar {
   height: 100%;
   left: 0;
@@ -1408,6 +1411,11 @@ height 50px
 .confirm-order .order-date {
   padding: 15px 0 15px 10px;
   font-weight: bold;
+  display: block;
+  color: #000;
+}
+.confirm-order .order-date:hover {
+  text-decoration: none;
 }
 .confirm-order .catalog-confirm >li {
   list-style-type: none;
