--- a/vonline_be/war/css/shop.styl
+++ b/vonline_be/war/css/shop.styl
@@ -333,6 +333,11 @@ th.next
   &:after
     content "День с заказом"
     margin-left -100px
+.delivery-day
+  background-color #bfa6c4
+  &:after
+    content "День доставки"
+    margin-left -100px
 .free-day
   background-color #62c462
   &:after
@@ -354,6 +359,7 @@ th.next
     content "Закрытый день"
     margin-left -60px
 .order-day:after
+.delivery-day:after
 .free-day:after
 .day-with-order:after
 .special-day:after
@@ -365,6 +371,7 @@ th.next
   color #fff
   display none
 .order-day:hover:after
+.delivery-day:hover:after
 .free-day:hover:after
 .day-with-order:hover:after
 .special-day:hover:after
