--- a/vonline_be/war/css/shop.styl
+++ b/vonline_be/war/css/shop.styl
@@ -801,6 +801,8 @@ th.next
       line-height 18px
       color #656565
       margin-bottom 10px
+      span
+        margin-left 0
     .modal-body
       padding 10px
       position static
